RB-94. Adeed image switcher depends on room type to RoomController. Added images of rooms. Fixed center align of image slider on room.jsp

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -6,6 +6,12 @@ body {
   scrollbar-shadow-color: #d2691e;
   scrollbar-3dlight-color: #ffebcd;
   scrollbar-darkshadow-color: #8b0000;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+  alignment: center;
+  text-align: center;
+
 }
 
 .wrapper {
@@ -30,6 +36,10 @@ body {
   scrollbar-shadow-color: #d2691e;
   scrollbar-3dlight-color: #ffebcd;
   scrollbar-darkshadow-color: #8b0000;
+  align-content: center;
+  align-items: center;
+  align-self: center;
+  alignment: center;
 }
 .slider .arrow:hover {
   opacity: .8;
